Closed
Bug 1329300
Opened 9 years ago
Closed 9 years ago
Crash in IPCError-browser | ShutDownKill | I422ToARGBRow_C
Categories
(Core :: Graphics, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: milan, Assigned: sotaro)
References
(Blocks 1 open bug)
Details
(Keywords: crash, Whiteboard: [gfx-noted])
Crash Data
Attachments
(1 file)
|
1.14 KB,
patch
|
nical
:
review+
jcristau
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-c075e0ad-be01-41a5-b71a-e1c432170103.
=============================================================
In ConvertYCbCrToRGB32 from CanvasRenderingContext2D::DrawImage.
| Reporter | ||
Comment 1•9 years ago
|
||
Sotaro, is this something we know about?
Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)
Priority: -- → P3
Whiteboard: [gfx-noted]
| Assignee | ||
Comment 2•9 years ago
|
||
It looks similar to Bug 1329305 comment 2.
| Assignee | ||
Comment 3•9 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #2)
> It looks similar to Bug 1329305 comment 2.
The problem seems to happen, if the content process takes too long to shut down.
| Assignee | ||
Comment 4•9 years ago
|
||
Flags: needinfo?(sotaro.ikeda.g)
| Assignee | ||
Updated•9 years ago
|
Attachment #8825290 -
Flags: review?(nical.bugzilla)
| Assignee | ||
Comment 5•9 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #3)
> (In reply to Sotaro Ikeda [:sotaro] from comment #2)
> > It looks similar to Bug 1329305 comment 2.
>
> The problem seems to happen, if the content process takes too long to shut
> down.
There might be a case that TextureClient became invalid already.
Updated•9 years ago
|
Attachment #8825290 -
Flags: review?(nical.bugzilla) → review+
| Assignee | ||
Comment 6•9 years ago
|
||
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/9984082aba42
Update validity check of SharedPlanarYCbCrImage r=nical
Comment 8•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 9•9 years ago
|
||
Please request Aurora approval on this when you get a chance.
| Assignee | ||
Comment 10•9 years ago
|
||
Comment on attachment 8825290 [details] [diff] [review]
patch - Update validity check of SharedPlanarYCbCrImage
Approval Request Comment
[Feature/Bug causing the regression]:None
[User impact if declined]:firefox could crash during shutdown with video playback
[Is this code covered by automated tests?]:Yes.
[Has the fix been verified in Nightly?]:There's no real STR.
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No. Low risk.
[Why is the change risky/not risky?]: I just add extra validity check
[String changes made/needed]: None
Flags: needinfo?(sotaro.ikeda.g)
Attachment #8825290 -
Flags: approval-mozilla-aurora?
Comment 11•9 years ago
|
||
Comment on attachment 8825290 [details] [diff] [review]
patch - Update validity check of SharedPlanarYCbCrImage
fix possible shutdown hang in gfx, beta52+, should be in b2
Attachment #8825290 -
Flags: approval-mozilla-aurora? → approval-mozilla-beta+
Comment 12•9 years ago
|
||
| bugherder uplift | ||
Updated•9 years ago
|
Blocks: shutdownkill
Updated•9 years ago
|
Blocks: IPCError_ShutDownKill
You need to log in
before you can comment on or make changes to this bug.
Description
•