Bug 1329300 - Update validity check of SharedPlanarYCbCrImage. r=nical, a=jcristau